@@ -1,4 +1,5 @@
 0.07
+ - Add test for no table data without 'no_data' message.
  - Remove obsolete code.
 
 0.06 2024-04-21T17:26:14+02:00
